Basic editing support.  Save support.
Major rework of selectors and actions for save-editor.

--- a/src/css/ui.scss
+++ b/src/css/ui.scss
@@ -59,5 +59,10 @@
     .ui-duplicant-editor {
         box-sizing: border-box;
         padding: 5px;
+
+        .ui-title {
+            display: inline-block;
+            width: auto;
+        }
     }
 }
