--- a/src/css/ui.scss
+++ b/src/css/ui.scss
@@ -65,10 +65,26 @@
             width: auto;
         }
     }
+
+    .ui-duplicant-skills {
+        .pt-html-table {
+            width: 100%;
+            max-height: 100%;
+        }
+    }
+
+    .ui-duplicant-effects {
+        .pt-html-table {
+            width: 100%;
+            max-height: 100%;
+        }
+    }
 }
 
-.pt-multi-select-popover .pt-menu {
-    max-width: 400px;
-    max-height: 300px;
-    overflow: auto;
+.pt-multi-select-popover, .pt-select-popover {
+    .pt-menu {
+        max-width: 400px;
+        max-height: 300px;
+        overflow: auto;
+    }
 }
